[gd_scene load_steps=6 format=3 uid="uid://d1qsfyynlbqto"]

[ext_resource type="Script" path="res://Scenes/ElementalEnemy.gd" id="1_aep0b"]
[ext_resource type="Texture2D" uid="uid://b4ibrsu2s5rf7" path="res://Sprites/stone_golem.png" id="2_pjyaa"]
[ext_resource type="Texture2D" uid="uid://dnxy2dc6j2tnp" path="res://Sprites/sword placeholder.png" id="3_fpouq"]
[ext_resource type="Script" path="res://Scenes/SwordPlaceholder.gd" id="4_fb4q6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7sw8"]
radius = 7.0

[node name="StoneEnemy" type="CharacterBody2D"]
z_index = 2
script = ExtResource("1_aep0b")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
texture = ExtResource("2_pjyaa")

[node name="SwordPlaceholder" type="Sprite2D" parent="."]
position = Vector2(22, -12)
rotation = -0.141627
scale = Vector2(0.137545, 0.137546)
texture = ExtResource("3_fpouq")
script = ExtResource("4_fb4q6")

[node name="SwordArea2D" type="Area2D" parent="SwordPlaceholder"]

[node name="SwordCollider" type="CollisionPolygon2D" parent="SwordPlaceholder/SwordArea2D"]
scale = Vector2(1, 1)
polygon = PackedVector2Array(82, -122.4, 82, -111.4, 69.6, -94.2, 83, -47.1, 83, -41.6, 77.3, 17, 74.8, 17, 59.8, 63, 56.8, 63, 23.8, 103, 18.6, 103, -48, 128.7, -48, 112.6, 3.10001, 63.5, 16.3, 6.2, 5.2, -46.6, -11.9, -58.9, -28.4, -47, -35.7, -47, -51.4, -59.2, -49, -66.2, -49, -80, -40.6, -80, 57, -122.2, 62.4728, -131.162)

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = 1.57079
shape = SubResource("CapsuleShape2D_f7sw8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 28)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f7sw8")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
